--- a/index.html
+++ b/index.html
@@ -406,46 +406,38 @@
       filter: brightness(1.08);
     }
 
+    /* Make conflicts extra obvious in Neon Pink */
+    body.theme-neonpink .cell.conflict {
+      background: rgba(250, 204, 21, 0.3);
+      color: #fef9c3;
+      box-shadow: 0 0 14px rgba(250, 204, 21, 0.95);
+    }
+
     /* Completion flash wave */
-/* Completion flash wave – very obvious */
-@keyframes flashWave {
-  0% {
-    transform: scale(1);
-    box-shadow: none;
-  }
-  25% {
-    transform: scale(1.08);
-    box-shadow: 0 0 22px var(--accent);
-    background: radial-gradient(circle, var(--accent) 0%, #0f172a 70%);
-    color: #0b1120;
-  }
-  55% {
-    transform: scale(0.96);
-    box-shadow: 0 0 6px rgba(15,23,42,0.7);
-  }
-  100% {
-    transform: scale(1);
-    box-shadow: none;
-  }
-}
 
-.cell.flash-wave {
-  animation: flashWave 600ms ease-out both;
-}
+    @keyframes flashWave {
+      0% {
+        transform: scale(1);
+        box-shadow: none;
+      }
+      25% {
+        transform: scale(1.08);
+        box-shadow: 0 0 22px var(--accent);
+        background: radial-gradient(circle, var(--accent) 0%, #0f172a 70%);
+        color: #0b1120;
+      }
+      55% {
+        transform: scale(0.96);
+        box-shadow: 0 0 6px rgba(15,23,42,0.7);
+      }
+      100% {
+        transform: scale(1);
+        box-shadow: none;
+      }
+    }
 
-
-.cell.flash-wave {
-  animation: flashWave 600ms ease-in-out forwards;
-}
-
-
-.cell.flash-wave {
-  animation: flashWave 550ms ease-in-out forwards;
-}
-
-
-    .cell.twinkle {
-      animation: twinkle 0.7s ease-in-out forwards;
+    .cell.flash-wave {
+      animation: flashWave 600ms ease-out both;
     }
 
     /* POPUP PAD */
@@ -517,7 +509,7 @@
 
     .pad-btn.primary {
       border-color: rgba(251, 191, 36, 0.7);
-      background: radial-gradient(circle at top, #facc15, #f97316);
+      background: radial-gradient(circle, #facc15, #f97316);
       color: #020617;
       font-weight: 700;
       box-shadow:
@@ -651,13 +643,6 @@
 
     .hidden { display: none !important; }
 
-    /* Make conflicts extra obvious in Neon Pink */
-    body.theme-neonpink .cell.conflict {
-      background: rgba(250, 204, 21, 0.3);
-      color: #fef9c3;
-      box-shadow: 0 0 14px rgba(250, 204, 21, 0.95);
-    }
-
     @media (max-width: 360px) {
       .card { padding: 12px 10px 14px; }
       .cell { font-size: 16px; }
@@ -681,13 +666,12 @@
 
     <div class="controls-row">
       <div class="select-wrap">
-<select id="difficulty">
-  <option value="easy" selected>Easy</option>
-  <option value="medium">Medium</option>
-  <option value="hard">Hard</option>
-  <option value="test">Test (1 cell)</option>
-</select>
-
+        <select id="difficulty">
+          <option value="easy" selected>Easy</option>
+          <option value="medium">Medium</option>
+          <option value="hard">Hard</option>
+          <option value="test">Test (1 cell)</option>
+        </select>
       </div>
       <div class="select-wrap">
         <select id="themeSelect">
@@ -782,13 +766,12 @@
 </div>
 
 <script>
-  const APP_VERSION = "v0.41";
+  const APP_VERSION = "v0.42";
 
   const STATS_KEY = "sudokuStatsV2";
   const STATE_KEY = "sudokuStateV2";
   const THEME_KEY = "sudokuThemeV1";
 
-  // show version tags
   document.getElementById("versionTag").textContent = "· " + APP_VERSION;
   document.getElementById("statsVersion").textContent = "Version " + APP_VERSION;
 
@@ -811,12 +794,11 @@
       "003709002600500000005080301000073090030000020900068503470000000060900000000040009",
       "000003400150000200000020073000400000040038001008060300000002040039070028200051000",
       "039000000070002904000000010000400090008001700014503800020010000005600000800004167"
+    ],
+    // Test mode: only one blank cell to speed up animation testing
+    test: [
+      "534678912672195348198342567859761423426853791713924856961537284287419635345286170"
     ]
-      // Test mode: only ONE empty cell to fill
-  test: [
-    // full valid solution with last cell blank
-    "534678912672195348198342567859761423426853791713924856961537284287419635345286170"
-  ]
   };
 
   // Game state
@@ -950,10 +932,6 @@
     return true;
   }
 
-  function isValidPlacement(index, value) {
-    return isValidValue(board, index, value);
-  }
-
   /* SOLVER */
 
   function solveSudoku(initialBoard) {
@@ -1033,7 +1011,8 @@
 
   function recordCompletion(diff, seconds, usedHint, madeError) {
     const s = stats[diff];
-    if (!s) return;
+    if (!s) return; // don't track "test" difficulty
+
     s.games++;
     s.totalSeconds += seconds;
     if (s.bestSeconds === null || seconds < s.bestSeconds) s.bestSeconds = seconds;
@@ -1329,32 +1308,33 @@
 
   /* COMPLETION ANIMATION */
 
- function celebrateWin() {
-  const cells = Array.from(gridEl.children);
+  function celebrateWin() {
+    const cells = Array.from(gridEl.children);
 
-  // Group cells into 3×3 boxes (0–8)
-  const boxes = Array.from({ length: 9 }, () => []);
-  cells.forEach((cell, index) => {
-    const row = Math.floor(index / 9);
-    const col = index % 9;
-    const boxIndex = Math.floor(row / 3) * 3 + Math.floor(col / 3);
-    boxes[boxIndex].push(cell);
-  });
-
-  // Wait a frame so the final render is committed
-  requestAnimationFrame(() => {
-    boxes.forEach((boxCells, boxIndex) => {
-      setTimeout(() => {
-        boxCells.forEach(cell => {
-          cell.classList.add("flash-wave");
-          setTimeout(() => {
-            cell.classList.remove("flash-wave");
-          }, 700); // slightly longer than animation duration
-        });
-      }, boxIndex * 160); // wave from box 0 to 8
+    // group cells by 3×3 box
+    const boxes = Array.from({ length: 9 }, () => []);
+    cells.forEach((cell, index) => {
+      const row = Math.floor(index / 9);
+      const col = index % 9;
+      const boxIndex = Math.floor(row / 3) * 3 + Math.floor(col / 3);
+      boxes[boxIndex].push(cell);
     });
-  });
-}
+
+    // wait a frame so final render is committed
+    requestAnimationFrame(() => {
+      boxes.forEach((boxCells, boxIndex) => {
+        setTimeout(() => {
+          boxCells.forEach(cell => {
+            cell.classList.add("flash-wave");
+            setTimeout(() => {
+              cell.classList.remove("flash-wave");
+            }, 700);
+          });
+        }, boxIndex * 160);
+      });
+    });
+  }
+
   /* INPUT HANDLERS */
 
   function handleCellTap(index, cellEl) {
@@ -1412,27 +1392,21 @@
     notes[idx].clear();
     clearDigitFromPeers(idx, num);
 
-   if (isSolvedCompletely()) {
-    const elapsed = Math.floor((Date.now() - startTime) / 1000);
-    recordCompletion(currentDifficulty, elapsed, gameUsedHint, gameMadeError);
-    statusText.textContent = "Completed 🎉";
-    if (timerInterval) clearInterval(timerInterval);
+    if (isSolvedCompletely()) {
+      const elapsed = Math.floor((Date.now() - startTime) / 1000);
+      recordCompletion(currentDifficulty, elapsed, gameUsedHint, gameMadeError);
+      statusText.textContent = "Completed 🎉";
+      if (timerInterval) clearInterval(timerInterval);
 
-    // final draw BEFORE animation
-    hidePopupPad();
-    saveState();
-    render();
+      hidePopupPad();
+      saveState();
+      render();      // final draw
 
-    celebrateWin();
-    return; // important: don't re-render again below
-  } else {
-    statusText.textContent = "In progress";
-  }
-
-  hidePopupPad();
-  saveState();
-  render();
-
+      celebrateWin(); // animate on top of final grid
+      return;         // don't fall through to extra render
+    } else {
+      statusText.textContent = "In progress";
+    }
 
     hidePopupPad();
     saveState();
@@ -1486,7 +1460,12 @@
       recordCompletion(currentDifficulty, elapsed, gameUsedHint, gameMadeError);
       statusText.textContent = "Completed 🎉";
       if (timerInterval) clearInterval(timerInterval);
+
+      hidePopupPad();
+      saveState();
+      render();
       celebrateWin();
+      return;
     }
 
     saveState();
